--- a/css/main.scss
+++ b/css/main.scss
@@ -1,15 +1,38 @@
-$col1: #c56666;
+$col1: #3e494d;
+$nav: #576a7c;
+$level4: 0px 14px 28px 0px rgba(0,0,0,0.25), 0px 10px 10px 0px rgba(0,0,0,0.22);
 
 html {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
+	background-color: #ffffff;
+	font-family: Raleway;
+	margin: 0;
+
+}
+
+main {
+	max-width: 1280px;
+}
+
+section {
+	height: 100vh;
+}
+
+.home {
 	background-color: $col1;
+}
+
+nav {
+	background-color: $nav;
+	box-shadow: $level4;
+	padding-left: 64px;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+	box-sizing: inherit;
 }
