--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,10 @@ $col2: #abcc85;
 $nav: #576a7c;
 $level4: 0px 14px 28px 0px rgba(0,0,0,0.25), 0px 10px 10px 0px rgba(0,0,0,0.22);
 
+* {
+	border: 1px solid red;
+}
+
 html {
 	box-sizing: border-box;
 }
@@ -17,6 +21,7 @@ h2 {
 	color: $col2;
 	font: 2.5rem Satisfy, cursive;
 	line-height: 3.5rem;
+	display: inline;
 }
 
 main {
@@ -32,19 +37,29 @@ section {
 }
 
 nav {
+	align-items: center;
 	background-color: $nav;
 	box-shadow: $level4;
-	height: 80px;
-	overflow: hidden;
 	display: flex;
-	justify-content: center;
+	height: 80px;
 }
 
 .nav-title {
-	margin-left: 64px;
+	flex: 1;
+	width: 25%;
 }
 
 .nav-menu {
+	display: flex;
+	flex: 1;
+	justify-content: flex-end;
+	list-style: none;
+	width: 70%;
+
+	a {
+		padding: 1em;
+		text-decoration: none;
+	}
 }
 
 *,
