--- a/css/main.scss
+++ b/css/main.scss
@@ -21,7 +21,6 @@ h2 {
 	color: $col2;
 	font: 2.5rem Satisfy, cursive;
 	line-height: 3.5rem;
-	display: inline;
 }
 
 main {
@@ -37,16 +36,15 @@ section {
 }
 
 nav {
-	align-items: center;
 	background-color: $nav;
 	box-shadow: $level4;
 	display: flex;
+	flex-flow: row nowrap;
 	height: 80px;
 }
 
 .nav-title {
 	flex: 1;
-	width: 25%;
 }
 
 .nav-menu {
@@ -54,7 +52,6 @@ nav {
 	flex: 1;
 	justify-content: flex-end;
 	list-style: none;
-	width: 70%;
 
 	a {
 		padding: 1em;
