Add Skills section, add function to generate margins

--- a/css/main.scss
+++ b/css/main.scss
@@ -41,6 +41,11 @@ $large: 1200px;
 	@return 0 $y-offset $blur $color;
 }
 
+//Function to calculate values based off an 8px grid.
+@function grid($val) {
+	@return 8px * $val;
+}
+
 *,
 *::before,
 *::after {
@@ -60,14 +65,15 @@ body {
 	background-color: $white;
 	margin: 0;
 	text-shadow: $shadow;
+	color: $white;
 }
 
 h1 {
 	color: $col2;
 	font: 4rem Satisfy, cursive;
 	line-height: 5rem;
-	margin: 40px 0 0 80px;
-
+	margin: grid(5) 0 0;
+	width: 100%;
 }
 
 h2 {
@@ -76,6 +82,13 @@ h2 {
 	height: 3.5rem;
 	line-height: 3.5rem;
 	overflow: hidden;
+}
+
+h3 {
+	font-size: 1.5rem;
+	line-height: 2rem;
+	margin: grid(1);
+	width: 100%;
 }
 
 a {
@@ -121,14 +134,14 @@ nav {
 	background-color: $nav;
 	display: flex;
 	flex-flow: row nowrap;
-	height: 80px;
+	height: grid(10);
 	justify-content: center;
 }
 
 .nav-title {
 	display: none;
 	flex: 1 1 auto;
-	margin-left: 64px;
+	margin-left: grid(8);
 
 	@media only screen and (min-width : $small) {
 		display: block;
@@ -147,7 +160,7 @@ ul {
 
 	@media only screen and (min-width : $small) {
 		justify-content: flex-end;
-		margin-right: 64px;
+		margin-right: grid(8);
     }
 
 	li {
@@ -175,17 +188,20 @@ ul {
 
 .row {
 	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
+	flex-flow: row wrap;
 	margin: 0 auto;
 	max-width: 960px;
 
 	.column {
-		flex: 1;
-		padding: 0 8px;
+		flex-basis: 100%;
+		padding: 0 grid(1);
+		text-align: center;
+
+		@media only screen and (min-width : $small) {
+			flex: 1;
+    	}
 
 		p {
-			color: $white;
 			line-height: 1.25rem;
 			margin: 1.25rem 0;
 		}
@@ -194,6 +210,34 @@ ul {
 	.two-thirds {
 		flex: 2;
 	}
+}
+
+.skills-row {
+	@extend .row;
+	align-content: space-around;
+	justify-content: space-around;
+
+	.column {
+		flex: 0 0 auto;
+	}
+}
+
+.button {
+	@include box-shadow(1);
+	align-content: center;
+	align-items: center;
+	background-color: $col2;
+	border: 1px solid $col1;
+	border-radius: 2px;
+	color: $col1;
+	display: flex;
+	font-size: .75rem;
+	font-weight: bold;
+	height: grid(3);
+	justify-content: center;
+	line-height: 1rem;
+	margin: grid(.5);
+	width: grid(10);
 }
 
 
