--- a/css/main.scss
+++ b/css/main.scss
@@ -12,6 +12,7 @@ $xsmall: 480px;
 $small: 768px;
 $medium: 992px;
 $large: 1200px;
+$overlay-top: calc(216px - (2rem + 16px);
 
 //Mixin to create box-shadows similiar to the Google Design Specs
 //Based on: https://css-tricks.com/snippets/sass/material-shadows-mixin/
@@ -101,7 +102,7 @@ h4 {
 	@extend h3;
 	color: $col2;
 	font-family: Satisfy, cursive;
-	font-size: 24px;
+	font-size: 1.5rem;
 }
 
 main {
@@ -282,7 +283,7 @@ ul {
 
 	.overlay {
 		position: absolute;
-		top: 168px;
+		top: $overlay-top;
 		background-color: rgba($col1, .5);
 		display: flex;
 		justify-content: center;
@@ -332,18 +333,25 @@ ul {
 
 .modal {
 	@include box-shadow(3);
-	height: 90vh;
-	background-color: rgba($col1, 0.95);
-	min-width: 80vw;
-	max-width: 960px;
-	position: fixed;
-	font-size: 1.5rem;
+	background-color: rgba($col1, .95);
+	font-size: 1rem;
 	line-height: 2rem;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
     z-index: 5;
     padding: grid(1);
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+
+    @media only screen and (min-width : $small) {
+		height: 90vh;
+		top: 50%;
+		left: 50%;
+    	transform: translate(-50%, -50%);
+    	min-width: 80vw;
+    	max-width: 960px;
+    	font-size: 1rem;	
+    }
 
     .close-btn {
     	@include box-shadow(2);
@@ -368,6 +376,10 @@ ul {
 
     	.button {
 			margin: 0 auto;
+			position: absolute;
+			bottom: 0;
+			left: 50%;
+			transform: translate(-50%, 0);
 		}
     }
 }
