--- a/css/main.scss
+++ b/css/main.scss
@@ -342,6 +342,7 @@ ul {
     top: 0;
     left: 0;
     bottom: 0;
+    overflow: hidden;
 
     @media only screen and (min-width : $small) {
 		height: 90vh;
@@ -352,6 +353,11 @@ ul {
     	max-width: 960px;
     	font-size: 1rem;	
     }
+
+    h1 {
+		font-size: 2.5rem;
+		line-height: 3rem;
+	}
 
     .close-btn {
     	@include box-shadow(2);
