--- a/css/main.scss
+++ b/css/main.scss
@@ -379,6 +379,7 @@ ul {
     	padding: grid(3);
     	height: 100%;
     	text-align: justify;
+    	overflow-y: auto;
 
     	.button {
 			margin: 0 auto;
